# telegram-n8n

./: .dockerignore  .gitignore  .~lock.Chowlin_Telegram_Food_Ordering_SaaS_Feature_Summary.docx#  Chowlin_Telegram_Food_Ordering_SaaS_Feature_Summary.docx  Dockerfile  README.md  bot.py  context.md  docker-compose.yml  dockerfile  generate_qr_codes.py  generate_short_codes.py  main.py  orders.db  pyproject.toml  receipt_generator.py  reports.py  requirements.txt  test.py  test_payload.py
.github/workflows/: deploy.yml
migrations/: 001_Add_Delivery_column.sql  002_Add_Menu_Filter_To_Restaurant_Tables.sql  003_Add_Menu_Item_Inventory.sql  004_Add_Kitchen_Order_Board.sql
nginx/: addtobursara.conf
