[project]
name = "telegram-n8n"
version = "0.1.0"
description = "An app for automating n8n workflow from with telegram"
authors = [
    {name = "perolasanta",email = "peterenesibello@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "aiogram (>=3.24.0,<4.0.0)",
    "fastapi (>=0.128.2,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "requests (>=2.32.5,<3.0.0)",
    "supabase (>=2.28.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "qrcode (>=8.2,<9.0)",
    "pillow (>=12.1.1,<13.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
